--- a/home.html
+++ b/home.html
@@ -18,12 +18,11 @@
             <div class="leftH">
                 <img src="img/phone.png" alt="">
                 <p>тел.:(8482) 24-30-54 (приёмная)</p>
-                <a href="http://"><img src="img/vk.png" alt=""></a>
-                <a href="http://"><img src="img/tg.png" alt=""></a>
             </div>
             <div class="rightH">
-                <a href=""><div class="in">Войти</div></a>
-                <a href=""><div class="up">Регистрация</div></a>
+                <a href="http://"><img src="img/vk.png" alt=""></a>
+                <a href="http://"><img src="img/tg.png" alt=""></a>
+                <a class="adm" href="http://"><img src="img/adm.png" alt=""></a>
             </div>
         </div>
         
@@ -36,7 +35,7 @@
                 <div class="purpose"><p>Наша главная цель: выпустить образованных и квалифицированных специалистов</p></div>
             </div>
             <div class="cont-right">
-                <img src="img/mobile.png" alt="">
+                <img src="img/collegh.png" alt="">
             </div>
         </div>
         <div class="cards">
