--- a/admissionCommittee.html
+++ b/admissionCommittee.html
@@ -11,17 +11,16 @@
     <title>Приёмная комиссия 2023</title>
 </head>
 <body>
-<div class="header">
+    <div class="header">
         <img class="logo" src="img/logo2.png" alt="">
     <div class="leftH">
         <img src="img/phone.png" alt="">
         <p>тел.:(8482) 24-30-54 (приёмная)</p>
-        <a href="http://"><img src="img/vk.png" alt=""></a>
-        <a href="http://"><img src="img/tg.png" alt=""></a>
     </div>
     <div class="rightH">
-        <a href=""><div class="in">Войти</div></a>
-        <a href=""><div class="up">Регистрация</div></a>
+        <a href="http://"><img src="img/vk.png" alt=""></a>
+        <a href="http://"><img src="img/tg.png" alt=""></a>
+        <a class="adm" href="http://"><img src="img/adm.png" alt=""></a>
     </div>
 </div>
 <p class="heading">ИНФОРМАЦИЯ О РАБОТЕ ПРИЕМНОЙ КОМИССИИ | 2023</p>
