--- a/promotionOfGraduates'Employment.html
+++ b/promotionOfGraduates'Employment.html
@@ -16,12 +16,11 @@
     <div class="leftH">
         <img src="img/phone.png" alt="">
         <p>тел.:(8482) 24-30-54 (приёмная)</p>
-        <a href="http://"><img src="img/vk.png" alt=""></a>
-        <a href="http://"><img src="img/tg.png" alt=""></a>
     </div>
     <div class="rightH">
-        <a href=""><div class="in">Войти</div></a>
-        <a href=""><div class="up">Регистрация</div></a>
+        <a href="http://"><img src="img/vk.png" alt=""></a>
+        <a href="http://"><img src="img/tg.png" alt=""></a>
+        <a class="adm" href="http://"><img src="img/adm.png" alt=""></a>
     </div>
 </div>
 <p class="heading">СОДЕЙСТВИЕ ТРУДОУСТРОЙСТВУ ВЫПУСКНИКОВ</p>
