--- a/calendar.html
+++ b/calendar.html
@@ -23,6 +23,64 @@
         <a class="adm" href="http://"><img src="img/adm.png" alt=""></a>
     </div>
 </div>
-<script src="calendar.css"></script>
+<p class="H1">РАСПИСАНИЕ ЗВОНКОВ</p>
+<div class="firstPart">
+    <div class="leftSide">
+        <button class="cont-left">
+            <img src="img/menuBlack.png" alt="">
+        </button>
+    </div>
+    <div class="rightSide">
+        <div class="time">
+            <img src="img/time.png" alt="">
+        </div>
+        <div class="Calendar">
+            <table id="calendar2">
+                <thead>
+                  <tr><td class="Left"><img src="img/leftnav.png" alt=""><td colspan="5"><td class="Right"><img src="img/rightnav.png" alt="">
+                  <tr><td>Пн<td>Вт<td>Ср<td>Чт<td>Пт<td>Сб<td>Вс
+                <tbody>
+              </table>
+        </div>
+    </div>
+</div>
+<div class="footer">
+    <div class="connection">
+        <div class="leftCon">
+            <h3>Обратная связь:</h3>
+            <div class="corp">
+                <div class="firstCorp">
+                    <p>1 корпус:</p>
+                    <p>24-10-25 - Вахта 1 корпуса</p>
+                    <p>24-30-54 - Приемная директора</p>
+                    <p>E-mail: tspk@edu.tgl.ru</p>
+                </div>
+                <div class="secondCorp">
+                    <p>2 корпус:</p>
+                    <p>48-20-93 - Вахта 2 корпуса</p>
+                    <p>28-36-44 - Секретарь директора</p>
+                    <p>E-mail: tspk-zo@yandex.ru - заочное отделение</p>
+                </div>
+            </div>
+            <div class="tPhone">
+                <img src="/img/phone.png" alt="">
+                <p>тел.: (8482) 24-30-54 (приемная)</p>
+            </div>
+        </div>
+        <div class="rightCon">
+            <h3>Мы в соц. сетях:</h3>
+            <div class="SN">
+                <img src="/img/vk.png" alt="">
+                <img src="/img/tg.png" alt="">
+            </div>
+            <p>Тех. поддержка E-mail: Ser53231987@yandex.ru</p>
+            <p>Дизайн: Жуков В.А.</p>
+            <p>Программирование: Воркунов В.С.</p>
+        </div>
+    </div>
+    <h4>Дата создания сайта 2024 г.</h4>
+</div>
+
+<script src="calendar.js"></script>
 </body>
 </html>
