--- a/home.html
+++ b/home.html
@@ -26,10 +26,38 @@
             </div>
         </div>
         
+
+        <div id="mySidenav" class="sidenav">
+            <div class="leftM">
+                <a href="promotionOfGraduates'Employment.html">Сведения об образовательной организации</a>
+                <a href="#">Региональная инновационная площадка </a>
+                <a href="#">Профилактика и безопасность </a>
+                <a href="#">Противодействие коррупции</a>
+                <a href="#">Материаллы прокуратуры </a>
+                <a href="#">ДЭ “Ворлдскиллс Россия”</a>
+                <a href="#">Ядро СППО</a>
+                <a href="#">БПОО</a>
+                <a href="#">ДПО</a>
+            </div>
+            <div class="rightM">
+                <a href="#">Ведущий колледж</a>
+                <a href="#">Преподователям </a>
+                <a href="#">Абитуриенты </a>
+                <a href="#">Документы </a>
+                <a href="#">Родителям</a>
+                <a href="#">Студентам </a> 
+                <a href="#">Контакты </a>
+                <a href="#">Питание </a>
+                <a href="#">СПО</a>
+            </div>
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><div class="close">CLOSE
+            </div></a>
+          </div>
+
         <div class="slogan">
-            <button class="cont-left">
+            <span  class="cont-left" onclick="openNav()">
                 <img src="img/menu.png" alt="">
-            </button>
+            </span>
             <div class="cont-center">
                 <div class="tspk"><p>ТОЛЬЯТТИНСКИЙ СОЦИАЛЬНО-ПЕДАГОГИЧЕСКИЙ КОЛЛЕДЖ</p></div>
                 <div class="purpose"><p>Наша главная цель: выпустить образованных и квалифицированных специалистов</p></div>
@@ -150,5 +178,6 @@
         <h4>Дата создания сайта 2024 г.</h4>
     </div>
     <script src="home.js"></script>
+    <script src="btnmenu.js"></script>
 </body>
 </html>
