--- a/home.html
+++ b/home.html
@@ -20,12 +20,42 @@
                 <p>тел.:(8482) 24-30-54 (приёмная)</p>
             </div>
             <div class="rightH">
-                <a href="http://"><img src="img/vk.png" alt=""></a>
-                <a href="http://"><img src="img/tg.png" alt=""></a>
-                <a class="adm" href="http://"><img src="img/adm.png" alt=""></a>
+                <a href="http://vk.com/tspk63"><img src="img/vk.png" alt=""></a>
+                <a href="https://t.me/s/tspktlt"><img src="img/tg.png" alt=""></a>
+                <a class="adm" href="#openModal"><img src="img/adm.png" alt=""></a>
             </div>
         </div>
         
+
+        <div id="openModal" class="modal">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <img src="img/logo3.png" alt="">
+                  <a href="#close" title="Close" class="Close">×</a>
+                </div>
+                <div class="modal-body">
+                    <p class="H1">Вход в личный кабинет</p>
+                    <div class="field">
+                        <p>E-mail</p>
+                        <input type="email" name="" id="">
+                    </div>
+                    <div class="field">
+                        <p>Пароль</p>
+                        <input type="password" name="" id="">
+                    </div>
+                    <div class="check">
+                        <input type="checkbox" name="" id="">
+                        <p>Запомнить меня</p>
+                    </div>
+                    <div class="SignUp">
+                        Войти
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
 
         <div id="mySidenav" class="sidenav">
             <div class="leftM">
@@ -97,11 +127,11 @@
         </div>
         <h2>БЫСТРЫЙ ДОСТУП</h2>
         <div class="firstbd">
-            <a href=""><div class="card">
+            <a href="information.html"><div class="card">
                 <div class="Up"><p>Сведения об образовательной организации</p></div>
                 <div class="Down"><img src="img/sooo.png" alt=""></div>
             </div></a>
-            <a href=""><div class="card">
+            <a href="/calendar.html"><div class="card">
                 <div class="Up"><p>Расписание занятий</p></div>
                 <div class="Down"><img src="img/rz.png" alt=""></div>
             </div></a>
