--- a/maneISIP.html
+++ b/maneISIP.html
@@ -25,11 +25,60 @@
 </div>
 <p class="H2">СПЕЦИАЛЬНОСТЬ</p>
 <p class="H1">Преподавание в начальных классах</p>
+<div id="mySidenav" class="sidenav">
+    <div class="leftM">
+        <a href="promotionOfGraduates'Employment.html">Сведения об образовательной организации</a>
+        <a href="#">Региональная инновационная площадка </a>
+        <a href="#">Профилактика и безопасность </a>
+        <a href="#">Противодействие коррупции</a>
+        <a href="#">Материаллы прокуратуры </a>
+        <a href="#">ДЭ “Ворлдскиллс Россия”</a>
+        <a href="#">Ядро СППО</a>
+        <a href="#">БПОО</a>
+        <a href="#">ДПО</a>
+    </div>
+    <div class="rightM">
+        <a href="#">Ведущий колледж</a>
+        <a href="#">Преподователям </a>
+        <a href="#">Абитуриенты </a>
+        <a href="#">Документы </a>
+        <a href="#">Родителям</a>
+        <a href="#">Студентам </a> 
+        <a href="#">Контакты </a>
+        <a href="#">Питание </a>
+        <a href="#">СПО</a>
+    </div>
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><div class="close">CLOSE
+    </div></a>
+  </div>
 <div class="firstPart">
     <div class="leftSide">
-        <button class="cont-left">
-            <img src="img/menuBlack.png" alt="">
-        </button>
+        <div id="mySidenav" class="sidenav">
+            <div class="leftM">
+                <a href="promotionOfGraduates'Employment.html">Сведения об образовательной организации</a>
+                <a href="#">Региональная инновационная площадка </a>
+                <a href="#">Профилактика и безопасность </a>
+                <a href="#">Противодействие коррупции</a>
+                <a href="#">Материаллы прокуратуры </a>
+                <a href="#">ДЭ “Ворлдскиллс Россия”</a>
+                <a href="#">Ядро СППО</a>
+                <a href="#">БПОО</a>
+                <a href="#">ДПО</a>
+            </div>
+            <div class="rightM">
+                <a href="#">Ведущий колледж</a>
+                <a href="#">Преподователям </a>
+                <a href="#">Абитуриенты </a>
+                <a href="#">Документы </a>
+                <a href="#">Родителям</a>
+                <a href="#">Студентам </a> 
+                <a href="#">Контакты </a>
+                <a href="#">Питание </a>
+                <a href="#">СПО</a>
+            </div>
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><div class="close">CLOSE
+            </div></a>
+          </div>
     </div>
     <div class="rightSide">
         <div class="card">
@@ -98,5 +147,6 @@
         <h4>Дата создания сайта 2024 г.</h4>
     </div>
     <script src="maneISIP.js"></script>
+    <script src="btnmenu.js"></script>
 </body>
 </html>
