--- a/ourSpecialties.html
+++ b/ourSpecialties.html
@@ -24,11 +24,37 @@
     </div>
 </div>
 <p class="heading">ПЕРЕЧЕНЬ СПЕЦИАЛЬНОСТЕЙ</p>
+<div id="mySidenav" class="sidenav">
+    <div class="leftM">
+        <a href="promotionOfGraduates'Employment.html">Сведения об образовательной организации</a>
+        <a href="#">Региональная инновационная площадка </a>
+        <a href="#">Профилактика и безопасность </a>
+        <a href="#">Противодействие коррупции</a>
+        <a href="#">Материаллы прокуратуры </a>
+        <a href="#">ДЭ “Ворлдскиллс Россия”</a>
+        <a href="#">Ядро СППО</a>
+        <a href="#">БПОО</a>
+        <a href="#">ДПО</a>
+    </div>
+    <div class="rightM">
+        <a href="#">Ведущий колледж</a>
+        <a href="#">Преподователям </a>
+        <a href="#">Абитуриенты </a>
+        <a href="#">Документы </a>
+        <a href="#">Родителям</a>
+        <a href="#">Студентам </a> 
+        <a href="#">Контакты </a>
+        <a href="#">Питание </a>
+        <a href="#">СПО</a>
+    </div>
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><div class="close">CLOSE
+    </div></a>
+  </div>
 <div class="conteiner">
     <div class="leftSide">
-        <button class="cont-left">
-            <img src="img/menuBlack.png" alt="">
-        </button>
+        <span  class="cont-left" onclick="openNav()">
+            <img src="img/menu.png" alt="">
+        </span>
     </div>
     <div class="rightSide">
         <div class="panel">
@@ -263,5 +289,6 @@
     <h4>Дата создания сайта 2024 г.</h4>
 </div>
 <script src="ourSpecialties.js"></script>
+<script src="btnmenu.js"></script>
 </body>
 </html>
