--- a/home.html
+++ b/home.html
@@ -48,9 +48,9 @@
                         <input type="checkbox" name="" id="">
                         <p>Запомнить меня</p>
                     </div>
-                    <div class="SignUp">
+                    <a href="admin.html" class="SignUp">
                         Войти
-                    </div>
+                    </a>
                 </div>
               </div>
             </div>
